add rounded-full, apply to profile page

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -4996,6 +4996,9 @@ select[disabled] {
     padding-right: var(--gp-padding-xlargeAndAbove, 80px) !important;
   }
 }
+.rounded-full {
+  border-radius: 50%;
+}
 
 /*! ------------------- */
 /*! Footer              */
