--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -17169,7 +17169,7 @@ fieldset[disabled] .btn {
   padding-top: 4px!important;
   padding-bottom: 4px!important
 }
-._11yc859a {
+.form__badge-dark-active {
   cursor: pointer!important;
   text-align: center!important;
   border: 1px solid #222!important;
@@ -17189,14 +17189,14 @@ fieldset[disabled] .btn {
   color: #fff!important;
   font-weight: 800!important
 }
-._gjz3kfc {
+.form__badge-dark-text {
   font-weight: 400!important;
   font-size: 14px!important;
   line-height: 18px!important;
   width: 58px!important;
   padding: 0 6px!important
 }
-._11yc859a::after {
+.form__badge-dark-active::after {
   content: ''!important;
   width: calc(100% + 2px)!important;
   height: calc(100% + 2px)!important;
@@ -17209,7 +17209,7 @@ fieldset[disabled] .btn {
   border-width: 2px!important;
   border-radius: inherit!important
 }
-._1710jwy {
+.form__badge-dark {
   cursor: pointer!important;
   text-align: center!important;
   border: 1px solid #ddd!important;
@@ -17228,7 +17228,7 @@ fieldset[disabled] .btn {
   font-size: 12px!important;
   line-height: 16px!important
 }
-._v56eio {
+.form__badge-dark-text {
   font-weight: 400!important;
   font-size: 14px!important;
   line-height: 18px!important;
