--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -52294,7 +52294,7 @@ body {
 ._sp8hvh:disabled::before {
   background: rgb(255, 255, 255) !important;
 }
-._joxslpg {
+.btn-card-badge-active {
   cursor: pointer !important;
   text-align: center !important;
   border: 1px solid rgb(34, 34, 34) !important;
@@ -52317,7 +52317,7 @@ body {
   color: rgb(34, 34, 34) !important;
 }
 @media (hover: hover) {
-  ._joxslpg:hover {
+  .btn-card-badge-active:hover {
     color: rgb(0, 0, 0) !important;
     border-color: rgb(0, 0, 0) !important;
   }
