--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -52278,3 +52278,8 @@ body {
     background-color: var(--color-loader-dots-light, #ffffff) !important;
   }
 }
+@media (min-width: 375px) {
+  .inline-sm {
+    display: inline !important;
+  }
+}
