--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -52482,6 +52482,92 @@ body {
   width: 100% !important;
 }
 
+._45lad6 {
+  -webkit-box-pack: justify !important;
+  display: flex !important;
+  justify-content: space-around !important;
+  width: inherit !important;
+}
+
+._1n3lp0u {
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  display: flex !important;
+  flex-direction: column !important;
+  overflow: auto !important;
+  color: rgb(34, 34, 34) !important;
+  padding: 24px !important;
+  width: 100% !important;
+}
+
+.dir.i144hzgs[class][class] {
+  border: 1px solid var(--j-qkgmf);
+  background-color: var(--f-mkcy-f);
+  border-radius: 12px;
+  padding: 16px;
+}
+
+.i144hzgs[class][class] {
+  display: inline-flex;
+  contain: layout;
+  width: 100%;
+}
+
+.dir-ltr.i144hzgs[class][class] .ccmqn89[class][class] {
+  margin-right: 12px;
+}
+
+.i144hzgs[class][class] .c1mzlq0d[class][class] {
+  width: 44px;
+  height: 44px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--f-k-smk-x);
+}
+
+.i144hzgs[class][class] .m1g17ezz[class][class] {
+  color: var(--f-k-smk-x);
+  font-size: var(--c-zdwk-p);
+  line-height: var(--j-p-z-kco);
+}
+
+.dir.i144hzgs[class][class] .a106r80v[class][class] {
+  margin-top: 12px;
+}
+.i144hzgs[class][class] .a106r80v[class][class] {
+  display: inline-flex;
+}
+
+.hg6cldq[class][class] {
+  font-weight: var(--h-oqhch);
+  font-size: var(--iw-ehf-f);
+  line-height: var(---s-l-myu);
+}
+
+._1lerwp6l {
+  cursor: pointer !important;
+  display: inline-block !important;
+  margin: 0px !important;
+  position: relative !important;
+  text-align: center !important;
+  text-decoration: none !important;
+  width: auto !important;
+  touch-action: manipulation !important;
+  font-family: var(--e-ls-qkw) !important;
+  font-size: var(--c-zdwk-p) !important;
+  line-height: var(--j-p-z-kco) !important;
+  font-weight: var(--jx-zk-pv) !important;
+  border-radius: var(--go-h-jh-l) !important;
+  outline: none !important;
+  padding: 8px 16px !important;
+  transition: box-shadow 0.2s ease 0s, -ms-transform 0.1s ease 0s, -webkit-transform 0.1s ease 0s, transform 0.1s ease 0s !important;
+  -webkit-tap-highlight-color: transparent !important;
+  border: none !important;
+  background: var(--f-k-smk-x) !important;
+  color: var(--f-mkcy-f) !important;
+}
+
  @media (min-width: 1128px) {
   ._z4lmgp {
     display: none !important;
@@ -52514,5 +52600,9 @@ body {
   }
   .inline-lg {
     display: none !important;
+  }
+  .sched-floating-btn {
+    right: 24px !important;
+    bottom: 24px !important;
   }
 }
