--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -51352,11 +51352,6 @@ body {
 .bk5zv5c[class][class] {
   position: relative;
 }
-._1trgpf1 {
-  height: 100% !important;
-  position: relative !important;
-  width: 100% !important;
-}
 .products-container__gallery-wrapper-overlay-plus-2 {
   -webkit-box-direction: normal !important;
   -webkit-box-orient: vertical !important;
@@ -51702,9 +51697,26 @@ body {
 .bk5zv5c[class][class] {
   position: relative;
 }
-
-._1trgpf1 {
-  height: 100% !important;
+._1ow4vwf {
+  overflow-y: hidden !important;
   position: relative !important;
+  min-height: 300px !important;
+  max-height: -webkit-calc(70vh - 64px) !important;
+  max-height: -moz-calc(70vh - 64px) !important;
+  max-height: calc(70vh - 64px) !important;
+}
+._18d0wvf {
+  height: 0 !important;
+  min-height: 100% !important;
+  min-width: 100% !important;
+  position: relative !important;
+  padding-top: 133.33333333333331% !important;
+}
+._1f7hlfr0 {
+  height: 100% !important;
   width: 100% !important;
+  min-height: 300px !important;
+  max-height: -webkit-calc(70vh - 64px) !important;
+  max-height: -moz-calc(70vh - 64px) !important;
+  max-height: calc(70vh - 64px) !important;
 }
