--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -51720,3 +51720,79 @@ body {
   max-height: -moz-calc(70vh - 64px) !important;
   max-height: calc(70vh - 64px) !important;
 }
+._h5cegly {
+  position: relative !important;
+  width: 100% !important;
+  margin-left: 0% !important;
+  margin-right: 0% !important;
+  padding-left: 6px !important;
+  padding-right: 6px !important;
+}
+@media (min-width: 375px) {
+  ._h5cegly {
+    padding-left: 6px !important;
+    padding-right: 6px !important;
+  }
+}
+@media (min-width: 744px) {
+  ._h5cegly {
+    width: 83.3333% !important;
+    margin-left: 8.33333% !important;
+    padding-left: 8px !important;
+    padding-right: 8px !important;
+  }
+}
+@media (min-width: 950px) {
+  ._h5cegly {
+    padding-left: 8px !important;
+    padding-right: 8px !important;
+  }
+}
+@media (min-width: 1128px) {
+  ._h5cegly {
+    width: 66.6667% !important;
+    margin-left: 16.6667% !important;
+    padding-left: 8px !important;
+    padding-right: 8px !important;
+  }
+}
+@media (min-width: 1440px) {
+  ._h5cegly {
+    padding-left: 8px !important;
+    padding-right: 8px !important;
+  }
+}
+._1mzpzsi {
+  -webkit-box-align: end !important;
+  --html-text-color: #FFFFFF !important;
+  align-items: flex-end !important;
+  background: rgb(0, 0, 0) !important;
+  display: flex !important;
+  flex: 1 1 auto !important;
+  padding: 24px !important;
+  transition: opacity 0.2s ease 0.2s !important;
+}
+@media (min-width: 744px) {
+  ._1mzpzsi {
+    display: block !important;
+    flex: 0 0 auto !important;
+  }
+}
+._1l0qqm1 {
+  max-width: 760px !important;
+  margin: 0px auto !important;
+  width: 100% !important;
+}
+@media (min-width: 744px) {
+  ._1l0qqm1 {
+    text-align: center !important;
+  }
+}
+._1d784e5 {
+  color: var(--html-text-color, #222222) !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif !important;
+  font-weight: 400 !important;
+  font-size: var(--html-text-font-size, 16) !important;
+  line-height: var(--html-text-line-height, 24px) !important;
+  word-break: break-word !important;
+}
